DoomBuilder X
based on code by anotak, CodeImp, MaxED, boris_i, ZZYZX
=======================================================
version 2.1.3.12
=====================
- fixed a minor bug with displaying texture counts in the browser
- merged texture and flat browser source code to reduce code duplication (this shouldn't have any effects that are noticeable to you, but please, keep an eye for new bugs with the texture browser)

version 2.1.3.10
=====================
- fixed newly drawn geometry merging incorrectly in rare circumstances
- fixed inconsistent behavior when drawing new geometry counterclockwise to more resemble the DB2 behavior
- fixed some weirdnesses with the Map Options screen if you had the first game config selected (Boom by default)
- when you alt-tab back into the script editor, the keyboard focus goes to the text box as expected
- when you Save As, the filename is filled in already with the current one
- renamed UDMF/Hexen activation stuff relating to projectiles because it's more correct and less confusing
- fixed crash when creating a new level with no resources selected and randomized textures
- fixed a crash when going in 3d mode with no resources loaded
- fixed a potential threading error with unknown images
- crossported one of MaxED's optimization to drawing new geometry from gzdb
- hide matching texture sets with 0 textures in the texture browser
- additional logging for shader loading crashes

version 2.1.3.8
=====================
- fixed a bug with setting back sidedefs in the linedef edit window
- update to ACC 1.56
- fixed inconsistency with linedef info panel
- fixed heretic hanging moss things not hanging in 3d mode
- improved logging information
- cleanup for a bunch of compilation warnings left over from DB2 (should hopefully help prevent future bugs). some of this is based on MaxED's GZDoomBuilder code. may slightly improve performance.

version 2.1.3.6
=====================