@@ -3,6 +3,7 @@ based on code by anotak, CodeImp, MaxED, boris_i, ZZYZX
 =======================================================
 version 2.1.3.12
 =====================
+- texture categories for subfolders/subwads inside pk3 resource archives
 - fixed a minor bug with displaying texture counts in the browser
 - merged texture and flat browser source code to reduce code duplication (this shouldn't have any effects that are noticeable to you, but please, keep an eye for new bugs with the texture browser)
 
